--- a/indexV1.html
+++ b/indexV1.html
@@ -101,7 +101,7 @@
 										<tr>
 											<th scope="col">#</th>
 											<th scope="col">Lot</th>
-											<th scope="col">Valeur</th>
+											<!-- <th scope="col">Valeur</th> -->
 											<th scope="col">ticketID</th>
 											<th scope="col">Nom</th>
 											<th scope="col">Prénom</th>
@@ -113,7 +113,7 @@
 										<tr v-for="(line) in winners" v-bind:key="line.IDlot" v-bind:title="line.Lot">
 											<td class="text-left">{{line['IDlot']}}</td>
 											<td class="text-left cell-lot">{{line['Lot']}}</td>
-											<td class="text-left">{{line['Valeur']}}</td>
+											<!-- <td class="text-left">{{line['Valeur']}}</td> -->
 											<td class="text-left cell-non-wrap">{{line['ticketID']}}</td>
 											<td class="text-left">{{line['Nom']}}</td>
 											<td class="text-left">{{line['Prénom']}}</td>
